<resources>
    <string name="app_name">Stackd</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_edit">editActivity</string>
    <string name="search_hint">Enter a candidate's name</string>
    <string name="export_resumes">Export</string>
    <string name="resume_img_desc">Picture of a resume</string>
    <string name="edit_done">Done</string>
    <string name="comments_hint">Your comments...</string>
    <string name="rating_yes">Yes</string>
    <string name="rating_no">No</string>
    <string name="rating_maybe">Maybe</string>
</resources>
