<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stackd.stackd.activities.StackActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.stackd.stackd.activities.StackActivity"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <LinearLayout
                android:id="@+id/tag_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/yes_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_yes"
                    android:backgroundTint="@color/colorGrey"
                    android:textColor="@color/colorWhite"
                    android:onClick="filterByRating"/>
                <Button
                    android:id="@+id/maybe_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_maybe"
                    android:backgroundTint="@color/colorGrey"
                    android:textColor="@color/colorWhite"
                    android:onClick="filterByRating"/>
                <Button
                    android:id="@+id/no_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_no"
                    android:backgroundTint="@color/colorGrey"
                    android:textColor="@color/colorWhite"
                    android:onClick="filterByRating"/>
            </LinearLayout>
        </HorizontalScrollView>
        <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <GridView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnWidth="90dp"
                android:numColumns="2"
                android:verticalSpacing="10dp"
                android:horizontalSpacing="10dp"
                android:stretchMode="columnWidth"
                android:gravity="center"
                />
        </FrameLayout>
    </LinearLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/cameraBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_action_name"
            app:backgroundTint="@color/colorPrimary"
            android:onClick="onCameraBtnClick"
            />
</android.support.constraint.ConstraintLayout>
