<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stackd.stackd.activities.EditActivity">

    <ScrollView
        android:id="@+id/imgContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/review_layout"
        app:layout_constraintVertical_weight="7">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/current_resume_shadow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                android:src="@drawable/r1"/>

            <com.stackd.stackd.views.DrawView
                android:id="@+id/current_resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/resume_img_desc"
                android:scaleType="fitStart"
                android:src="@drawable/r1" />
        </FrameLayout>

    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/review_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="3">

        <HorizontalScrollView
            android:id="@+id/tags"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/comment_field"
            android:scrollbars="none">
            <LinearLayout
                android:id="@+id/tagListLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>
        </HorizontalScrollView>
        <Button
            android:id="@+id/submit_resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorAccent"
            android:onClick="onDoneBtnClick"
            android:orientation="vertical"
            android:text="@string/edit_done"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comment_field" />

        <EditText
            android:id="@+id/comment_field"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@android:color/white"
            android:gravity="top"
            android:hint="@string/comments_hint"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/submit_resume"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tags"
            android:layout_marginBottom="5dp"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/highlightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onHighlightBtnClick"
        app:elevation="7dp"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imgContainer"/>

</android.support.constraint.ConstraintLayout>
